--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nyonika – Aspiring Physician</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="output.css">
   <style>
     /* hero card tilt via CSS variable (updated in JS) */
@@ -35,7 +36,7 @@
 
     <!-- Hero -->
     <section class="flex flex-col items-center text-center space-y-5 reveal">
-      <img src="images/evilLarry.jpeg" alt="Portrait of Nyonika"
+      <img src="images/evilLarry.png" alt="Portrait of Nyonika"
            class="w-40 h-40 rounded-full border-4 border-purple-500 shadow-xl object-cover">
       <h1 class="text-5xl font-extrabold text-purple-400 drop-shadow-lg">Nyonika</h1>
       <p class="text-xl text-gray-300 max-w-md">
