--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nyonika – Aspiring Physician</title>
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="images/evilLarry.png">
   <link rel="stylesheet" href="output.css">
   <style>
     /* hero card tilt via CSS variable (updated in JS) */
