Removed Contact, For now.

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
     </section>
 
     <!-- Contact -->
-    <section class="pt-4 text-center reveal">
-      <a href="mailto:nyonika@example.com"
-         class="inline-block mt-2 px-8 py-3 rounded-full bg-purple-600/80 hover:bg-purple-600
-                text-gray-100 font-semibold shadow-lg backdrop-blur-sm transition">
-        Get in Touch
-      </a>
-    </section>
+    <!-- <section class="pt-4 text-center reveal"> -->
+      <!-- <a href="mailto:nyonika@example.com" -->
+         <!-- class="inline-block mt-2 px-8 py-3 rounded-full bg-purple-600/80 hover:bg-purple-600 -->
+                <!-- text-gray-100 font-semibold shadow-lg backdrop-blur-sm transition"> -->
+        <!-- Get in Touch -->
+      <!-- </a> -->
+    <!-- </section> -->
   </main>
 
   <!-- ───── interaction JS ───── -->
