--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nyonika – Aspiring Physician & Mental Health Advocate</title>
-  <!-- Consider creating a new favicon, e.g., initials or a simple medical/brain icon -->
   <!-- <link rel="icon" type="image/png" href="images/nyonika-favicon.png"> -->
   <link rel="stylesheet" href="output.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,11 +16,11 @@
     .font-playfair {
       font-family: 'Playfair Display', serif;
     }
-    .section-title {
+    .section-title { /* Main title e.g., "About Me", "Career Goals" */
       @apply text-3xl font-playfair text-gray-800 mb-3;
     }
-    .section-subtitle {
-      @apply text-sm text-indigo-600 uppercase tracking-wider font-semibold mb-8;
+    .section-subtitle { /* Pre-title e.g., "My Story", "My Aspirations" - User requested this to be larger */
+      @apply text-xl font-semibold text-indigo-700 mb-2; /* Adjusted: larger, not uppercase, different font weight */
     }
     .animated-gradient-text {
       background-image: linear-gradient(to right, #4f46e5, #7c3aed, #db2777);
@@ -40,19 +39,6 @@
 </head>
 
 <body class="bg-slate-50 text-gray-700 antialiased">
-
-  <!-- Navigation (Optional, can be added later if needed) -->
-  <!-- <nav class="fixed top-0 left-0 right-0 bg-white/80 backdrop-blur-md shadow-sm z-50">
-    <div class="max-w-5xl mx-auto px-6 py-3 flex justify-between items-center">
-      <a href="#" class="text-2xl font-playfair font-bold text-indigo-700">Nyonika</a>
-      <div class="space-x-6">
-        <a href="#about" class="text-gray-600 hover:text-indigo-600 transition">About</a>
-        <a href="#goals" class="text-gray-600 hover:text-indigo-600 transition">Goals</a>
-        <a href="#experience" class="text-gray-600 hover:text-indigo-600 transition">Experience</a>
-        <a href="#contact" class="text-gray-600 hover:text-indigo-600 transition">Contact</a>
-      </div>
-    </div>
-  </nav> -->
 
   <main class="max-w-5xl mx-auto px-6 pt-16 pb-24 space-y-20 md:space-y-28">
 
@@ -74,11 +60,8 @@
         </a>
       </div>
       <div class="md:w-2/5 flex justify-center md:justify-end reveal-fade-left">
-        <!-- IMPORTANT: Replace this div with your actual image -->
         <div class="w-64 h-80 md:w-80 md:h-96 bg-gray-200 rounded-lg shadow-xl flex items-center justify-center text-gray-500 overflow-hidden">
-          <!-- Example with an img tag, replace src and alt -->
            <img src="https://via.placeholder.com/400x500/E2E8F0/4A5568?text=Nyonika's+Portrait" alt="Portrait of Nyonika" class="w-full h-full object-cover">
-          <!-- If no image yet: <span class="text-center p-4">Nyonika's<br>Portrait Here</span> -->
         </div>
       </div>
     </section>
@@ -98,7 +81,6 @@
           <p>I envision a future where mental health is prioritized as an integral part of overall wellbeing, accessible and destigmatized for all.</p>
         </div>
         <div class="md:col-span-2 flex justify-center">
-          <!-- Abstract SVG or relevant image -->
           <svg class="w-full max-w-xs h-auto text-indigo-500 opacity-75" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M50 5C25.1472 5 5 25.1472 5 50C5 74.8528 25.1472 95 50 95C74.8528 95 95 74.8528 95 50C95 25.1472 74.8528 5 50 5Z" stroke="currentColor" stroke-width="3" stroke-dasharray="5 5"/>
             <path d="M50 20V35M50 65V80M20 50H35M65 50H80M32.2218 32.2218L40.3033 40.3033M59.6967 59.6967L67.7782 67.7782M32.2218 67.7782L40.3033 59.6967M59.6967 40.3033L67.7782 32.2218" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -116,7 +98,7 @@
       <div class="mt-12 grid md:grid-cols-3 gap-8">
         <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
           <div class="flex justify-center mb-4">
-            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
+            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
           </div>
           <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Compassionate Patient Care</h3>
           <p class="text-gray-600 text-sm leading-relaxed text-center">
@@ -125,7 +107,10 @@
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
           <div class="flex justify-center mb-4">
-             <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a4.5 4.5 0 00-6.364 0L12 16.5l-1.064-1.072a4.5 4.5 0 10-6.364 6.364L12 21.5l7.428-7.428a4.5 4.5 0 000-6.364zm0 0L12 8.5M5.636 8.5L12 15.5"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21.5V19M12 5V2.5"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.929 4.929L3.5 3.5M20.5 20.5l-1.429-1.429M4.929 20.5L3.5 22M20.5 4.929L22 3.5"></path></svg>
+            <!-- Sparkles Icon for Medical Innovation -->
+            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L1.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.25 12L17 14.188l-1.25-2.188a2.25 2.25 0 00-1.7-1.7L12 9.25l2.188-1.25a2.25 2.25 0 001.7-1.7L17 4.063l1.25 2.187a2.25 2.25 0 001.7 1.7L22.25 9.25l-2.188 1.25a2.25 2.25 0 00-1.7 1.7z"></path>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Medical Innovation</h3>
           <p class="text-gray-600 text-sm leading-relaxed text-center">
@@ -134,7 +119,10 @@
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
           <div class="flex justify-center mb-4">
-            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path><path d="M5 13a9 9 0 100-12 9 9 0 000 12zM12 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3zm0 0v3m-3.464-4.536A5.002 5.002 0 004 10.93V12a8 8 0 004.586 7.414m4.828 0A8.003 8.003 0 0020 12v-1.07a5.002 5.002 0 00-4.536-3.464M15 8a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+            <!-- Megaphone Icon for Mental Health Advocacy -->
+            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M10.34 15.84c-.688-.06-1.386-.09-2.09-.09H7.5a4.5 4.5 0 00-4.5 4.5v.75c0 .552.448 1 1 1h2.25m17.5 0H2.75A.75.75 0 002 20.25V19.5a4.5 4.5 0 014.5-4.5h.75c.698 0 1.39.03 2.074.089M15.375 15.375a7.5 7.5 0 00-7.5-7.5H4.5m11.25 4.5c.052.162.1.324.138.492M15.375 15.375V21.75m0-6.375v-1.125c0-6.21-5.04-11.25-11.25-11.25H3.75m11.25 11.25c0 3.438-1.946 6.446-4.707 7.957m0-13.714c2.762-1.51 4.707-4.52 4.707-7.958V3.75m-11.25 0h11.25"></path>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mental Health Advocacy</h3>
           <p class="text-gray-600 text-sm leading-relaxed text-center">
@@ -144,30 +132,38 @@
       </div>
     </section>
 
-    <!-- Combined Academics & Experience Section -->
+    <!-- Combined Research, Academics & Experience Section -->
     <section id="experience" class="reveal-fade-up">
       <p class="section-subtitle text-center">My Journey & Qualifications</p>
-      <h2 class="section-title text-center">Academics & Experience</h2>
+      <h2 class="section-title text-center">Research, Academics & Experience</h2>
       <div class="mt-12 grid md:grid-cols-2 gap-10">
-        <!-- Academics Column -->
+        <!-- Research & Academics Column -->
         <div class="bg-white p-8 rounded-lg shadow-lg">
           <h3 class="text-2xl font-semibold text-gray-800 mb-6 flex items-center">
-            <svg class="w-7 h-7 text-indigo-600 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v11.494m0 0A7.5 7.5 0 0019.5 12S12 4.5 4.5 12a7.5 7.5 0 007.5 5.747z"></path></svg>
-            Academics
+            <svg class="w-7 h-7 text-indigo-600 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v11.494m0 0A7.5 7.5 0 0019.5 12S12 4.5 4.5 12a7.5 7.5 0 007.5 5.747z"></path></svg>
+            Research and Academics
           </h3>
-          <div class="space-y-5">
-            <div>
-              <p class="text-sm font-medium text-indigo-700">GPA</p>
-              <p class="text-lg text-gray-700">3.90 / 4.00</p>
-            </div>
-            <div>
-              <p class="text-sm font-medium text-indigo-700">MCAT Score</p>
-              <p class="text-lg text-gray-700">515 <span class="text-sm text-gray-500">(CP: 129, CARS: 128, BB: 130, PS: 128)</span></p>
-            </div>
+          <div class="space-y-6">
             <div>
               <p class="text-sm font-medium text-indigo-700">Degree</p>
               <p class="text-lg text-gray-700">B.S. in Neuroscience, Minor in Psychology</p>
               <p class="text-sm text-gray-500">University of Excellence (Class of 20XX)</p>
+            </div>
+            <div>
+              <h4 class="text-lg font-semibold text-gray-800 mt-4">Featured Research</h4>
+              <p class="text-sm text-indigo-600 mb-1">"The Role of Neuroinflammation in Early-Stage Cognitive Decline"</p>
+              <p class="text-xs text-gray-500 mb-1">Presented at the National Undergraduate Neuroscience Conference, 20XX</p>
+              <p class="text-gray-600 text-sm leading-relaxed">
+                Investigated novel biomarkers for detecting neuroinflammatory processes in preclinical models. This work involved extensive literature review, experimental design, data analysis using SPSS, and contributed to a manuscript currently under peer review.
+              </p>
+            </div>
+            <div>
+                <h4 class="text-lg font-semibold text-gray-800 mt-4">Key Coursework & Skills</h4>
+                <ul class="list-disc list-inside text-sm text-gray-600 mt-1 space-y-0.5">
+                    <li>Advanced Neurobiology, Cognitive Psychology, Biostatistics</li>
+                    <li>Laboratory Techniques: PCR, Western Blot, Immunohistochemistry</li>
+                    <li>Data Analysis: Python (Pandas, Matplotlib), R, SPSS</li>
+                </ul>
             </div>
           </div>
         </div>
@@ -175,8 +171,8 @@
         <!-- Experience Column -->
         <div class="bg-white p-8 rounded-lg shadow-lg">
            <h3 class="text-2xl font-semibold text-gray-800 mb-6 flex items-center">
-            <svg class="w-7 h-7 text-indigo-600 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-            Experience
+            <svg class="w-7 h-7 text-indigo-600 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+            Clinical & Community Experience
           </h3>
           <div class="space-y-6">
             <div>
@@ -187,10 +183,10 @@
               </p>
             </div>
             <div>
-              <h4 class="text-lg font-semibold text-gray-800">Research Assistant – University Neuroscience Lab</h4>
+              <h4 class="text-lg font-semibold text-gray-800">Research Assistant (Clinical Focus) – University Psychiatry Dept.</h4>
               <p class="text-sm text-indigo-600 mb-1">Sep 20XX – May 20XX</p>
               <p class="text-gray-600 text-sm leading-relaxed">
-                Contributed to a cutting-edge lab investigating neuroplasticity in response to stress. Responsibilities included data collection, literature reviews, statistical analysis, and co-authoring a research poster presented at the State Undergraduate Research Symposium.
+                Supported a study on the efficacy of mindfulness-based interventions for anxiety in young adults. Responsibilities included participant recruitment, data entry for patient-reported outcomes, and assisting with ethics board documentation.
               </p>
             </div>
             <div>
@@ -239,7 +235,6 @@
         <div class="mt-8 text-center">
             <p class="text-sm text-gray-500 mb-3">Or connect with me on:</p>
             <div class="flex justify-center space-x-5">
-                <!-- Replace # with actual links -->
                 <a href="#" class="text-gray-400 hover:text-indigo-600 transition">
                     <span class="sr-only">LinkedIn</span>
                     <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -247,9 +242,9 @@
                     </svg>
                 </a>
                 <a href="#" class="text-gray-400 hover:text-indigo-600 transition">
-                    <span class="sr-only">ResearchGate or Academia.edu (example)</span>
-                     <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"> <!-- Placeholder icon -->
-                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/>
+                    <span class="sr-only">ResearchGate or Academic Profile</span>
+                     <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.625 15.014c.355.019.69.028 1.004.028.552 0 1.104-.028 1.646-.083l.102.493c.368 1.776 1.99 3.055 3.86 3.055.55 0 1.08-.087 1.582-.25l.286.429A7.96 7.96 0 0112 20a7.963 7.963 0 01-5.078-1.714l.257-.452c.525.188 1.079.29 1.652.29.93 0 1.788-.261 2.508-.731l-.114-.501zm6.873-1.493c.054-.28.089-.568.089-.861 0-.342-.046-.677-.131-.998l.47-.297A7.963 7.963 0 0120 12a7.96 7.96 0 01-1.732 4.953l-.49-.222c-.03-.136-.063-.27-.098-.401l-.001-.002c-.597-.03-1.197-.123-1.794-.275l-.13-.518zm-12.996 0l-.13.518c-.597.152-1.197.245-1.794.275l-.001.002c-.035.131-.069.265-.098.401l-.49.222A7.96 7.96 0 014 12a7.963 7.963 0 011.732-4.953l.47.297c-.085.32-.131.656-.131.998 0 .293.035.58.089.861l-.102.494c-.369 1.776-1.99 3.055-3.86 3.055-.54 0-1.056-.082-1.54-.235l-.269.441A7.963 7.963 0 014.002 12c0-2.331.998-4.435 2.62-5.954l.427.303c.208.622.335 1.28.335 1.962 0 1.005-.232 1.95-.652 2.777l.469.296zM12 6a3 3 0 100 6 3 3 0 000-6z" />
                     </svg>
                 </a>
                  <a href="mailto:nyonika@example.com" class="text-gray-400 hover:text-indigo-600 transition">
@@ -274,13 +269,12 @@
   <script>
     document.getElementById('currentYear').textContent = new Date().getFullYear();
 
-    // Simple Scroll Reveal
     const revealElements = document.querySelectorAll('.reveal-fade-up, .reveal-fade-right, .reveal-fade-left');
     const revealObserver = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
           entry.target.classList.add('revealed');
-          revealObserver.unobserve(entry.target); // Optional: stop observing once revealed
+          revealObserver.unobserve(entry.target);
         }
       });
     }, { threshold: 0.1 });
