--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     .section-title { /* Main title e.g., "About Me", "Career Goals" */
       @apply text-3xl font-playfair text-gray-800 mb-3;
     }
-    .section-subtitle { /* Pre-title e.g., "My Story", "My Aspirations" - User requested this to be larger */
-      @apply text-xl font-semibold text-indigo-700 mb-2; /* Adjusted: larger, not uppercase, different font weight */
+    .section-subtitle { /* Pre-title e.g., "My Story", "My Aspirations" */
+      @apply text-2xl font-medium text-indigo-700 mb-3; /* Updated: larger size, adjusted margins */
     }
     .animated-gradient-text {
       background-image: linear-gradient(to right, #4f46e5, #7c3aed, #db2777);
@@ -107,9 +107,9 @@
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
           <div class="flex justify-center mb-4">
-            <!-- Sparkles Icon for Medical Innovation -->
-            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L1.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.25 12L17 14.188l-1.25-2.188a2.25 2.25 0 00-1.7-1.7L12 9.25l2.188-1.25a2.25 2.25 0 001.7-1.7L17 4.063l1.25 2.187a2.25 2.25 0 001.7 1.7L22.25 9.25l-2.188 1.25a2.25 2.25 0 00-1.7 1.7z"></path>
+            <!-- Updated Medical Innovation Icon -->
+            <svg class="w-12 h-12 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
             </svg>
           </div>
           <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Medical Innovation</h3>
@@ -119,9 +119,9 @@
         </div>
         <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
           <div class="flex justify-center mb-4">
-            <!-- Megaphone Icon for Mental Health Advocacy -->
-            <svg class="w-12 h-12 text-indigo-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M10.34 15.84c-.688-.06-1.386-.09-2.09-.09H7.5a4.5 4.5 0 00-4.5 4.5v.75c0 .552.448 1 1 1h2.25m17.5 0H2.75A.75.75 0 002 20.25V19.5a4.5 4.5 0 014.5-4.5h.75c.698 0 1.39.03 2.074.089M15.375 15.375a7.5 7.5 0 00-7.5-7.5H4.5m11.25 4.5c.052.162.1.324.138.492M15.375 15.375V21.75m0-6.375v-1.125c0-6.21-5.04-11.25-11.25-11.25H3.75m11.25 11.25c0 3.438-1.946 6.446-4.707 7.957m0-13.714c2.762-1.51 4.707-4.52 4.707-7.958V3.75m-11.25 0h11.25"></path>
+            <!-- Updated Mental Health Advocacy Icon -->
+            <svg class="w-12 h-12 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z" />
             </svg>
           </div>
           <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mental Health Advocacy</h3>
